tests/ui/system_time.stderr
error: nondeterministic workflow API detected; use durust::now instead
 --> tests/ui/system_time.rs:2:10
  |
2 | async fn bad(_: ()) -> durust::Result<()> {
  |          ^^^
